--- a/Game of Life/ReactiveTutorial/ReactiveTutorial/MainWindow.xaml
+++ b/Game of Life/ReactiveTutorial/ReactiveTutorial/MainWindow.xaml
@@ -1,66 +1,95 @@
 ﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="" Height="450" Width="500">
-    <StackPanel Name="stackPanel" Width="400" Height="400">
-        <Grid Name="menuGrid">
+        Title="" Height="525" Width="500" ResizeMode="NoResize">
+
+
+        <StackPanel Name="stackPanel" >
+        <Grid Name="menuGrid" Background="#FFEEEEEE">
             <Grid.RowDefinitions>
-                <RowDefinition Height="auto" />
+                <RowDefinition Height="25" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="auto" />
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-            <TextBlock Name="sliderValue" Text="{Binding Path=Value, ElementName=slider, Mode=OneWay}" Grid.Column="0" />
-            <Slider Grid.Column="1" x:Name="slider" Minimum="1" SmallChange="1" IsSnapToTickEnabled="True"/>
-            <ToggleButton Name="inf" Content="inf" Grid.Column="2" />
-            <Button Name="playN" Content="Play" Grid.Column="3" />
-            <Button Name="play1"  Content="Play 1" Grid.Column="4" />
-            <Button Name="kill" Content="Kill" Grid.Column="5" />
+            <TextBlock Text="N=" Grid.Column="0" TextAlignment="Center" LineStackingStrategy="BlockLineHeight" LineHeight="21.333" Margin="10,0,0,0"/>
+            <TextBlock Name="sliderValue" Text="{Binding Path=Value, ElementName=slider, Mode=OneWay}" Grid.Column="1" TextAlignment="Center" LineStackingStrategy="BlockLineHeight" LineHeight="21.333" HorizontalAlignment="Left" Margin="0,0,10,0" />
+            <Slider Grid.Column="2" x:Name="slider" Minimum="1" SmallChange="1" IsSnapToTickEnabled="True"/>
+            <ToggleButton Name="inf" Content="N = INFINITY" Grid.Column="3" Margin="2" />
+            <Button Name="playN" Content="PLAY N TIMES" Grid.Column="4" Margin="2" />
+            <Button Name="play1"  Content="PLAY 1 TIME" Grid.Column="5" Margin="2" />
+            <Button Name="kill" Content="RESET" Grid.Column="6" Margin="2.5,2,2,0" Height="21" VerticalAlignment="Top" />
         </Grid>
-        <Grid Name="gameGrid">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-        </Grid>
+        <StackPanel Name="gameStackPanel">
+            <Grid Name="gameGrid"  Height="500">
+                <Grid.Resources>
+                    <Style TargetType="ToggleButton">
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type ToggleButton}">
+                                    <Border x:Name="border" Background="#FFFFFFFF">
+                                        <ContentPresenter x:Name="contentPresenter"/>
+                                    </Border>
+                                    <ControlTemplate.Triggers>
+                                        <Trigger Property="IsChecked" Value="true">
+                                            <Setter Property="Background" TargetName="border" Value="#FF000000"/>
+                                        </Trigger>
+                                        <Trigger Property="Control.IsMouseOver"  Value="true">
+                                            <Setter Property="Background" TargetName="border" Value="#FFEEEEEE"/>
+                                        </Trigger>
+                                    </ControlTemplate.Triggers>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </Grid.Resources>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+            </Grid>
+        </StackPanel>
+        
         <StackPanel/>
     </StackPanel>
 
 </Window>
+
