--- a/Game of Life/Game of Life/Game of Life/MainWindow.xaml
+++ b/Game of Life/Game of Life/Game of Life/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="" Height="525" Width="500" ResizeMode="NoResize">
+        Title="Game of Life" Height="525" Width="500" ResizeMode="NoResize">
 
 
         <StackPanel Name="stackPanel" >
@@ -20,7 +20,7 @@
             </Grid.ColumnDefinitions>
             <TextBlock Text="N=" Grid.Column="0" TextAlignment="Center" LineStackingStrategy="BlockLineHeight" LineHeight="21.333" Margin="10,0,0,0"/>
             <TextBlock Name="sliderValue" Text="{Binding Path=Value, ElementName=slider, Mode=OneWay}" Grid.Column="1" TextAlignment="Center" LineStackingStrategy="BlockLineHeight" LineHeight="21.333" HorizontalAlignment="Left" Margin="0,0,10,0" />
-            <Slider Grid.Column="2" x:Name="slider" Minimum="1" SmallChange="1" IsSnapToTickEnabled="True"/>
+            <Slider Grid.Column="2" x:Name="slider" Minimum="1" SmallChange="1" IsSnapToTickEnabled="True" Maximum="9"/>
             <ToggleButton Name="inf" Content="N = INFINITY" Grid.Column="3" Margin="2" />
             <Button Name="playN" Content="PLAY N TIMES" Grid.Column="4" Margin="2" />
             <Button Name="play1"  Content="PLAY 1 TIME" Grid.Column="5" Margin="2" />
